# edu

./: .gitignore  CLAUDE.md  Makefile  README.md
back-end/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
back-end/alembic/: env.py
back-end/alembic/versions/: 11d6c2354815_create_auth_addresses.py  2abc53a86940_create_orders_and_order_items.py  52b7844c0782_create_auth_users.py  57b1073cc5f3_create_cart_and_cart_items.py  60934c36c65d_create_support_messages.py  7bdd5464c421_create_products_and_reviews.py  95088bb8eee7_create_notifications_device_tokens.py  b0ee0d97cc0d_create_payment_methods.py  c1a2b3d4e5f6_update_education_level_grades.py  d2e3f4a5b6c7_add_order_status.py  e3f4a5b6c7d8_create_notifications.py
back-end/app/: main.py
back-end/app/bff/: router.py
back-end/app/core/: celery_app.py  config.py  database.py  firebase.py  ids.py  logging.py  redis_client.py
back-end/app/modules/addresses/: exceptions.py  models.py  routes.py  schemas.py  services.py
back-end/app/modules/auth/: dependencies.py  enums.py  exceptions.py  models.py  rate_limit.py  routes.py  schemas.py  security.py  services.py  tasks.py
back-end/app/seeds/: products.py
back-end/postgres/initdb.d/: init_test_db.sh
back-end/tests/: conftest.py  test_health.py  test_tracking_directions.py  test_tracking_routes.py  test_tracking_routing.py  test_tracking_schemas.py  test_tracking_services.py
back-end/tests/e2e/: conftest.py  test_auth_flow.py
back-end/tests/seeds/: test_products_seed.py
front-end-flutter/: .gitignore  (+2 more)
(+177 files in other folders)
